--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Battleship Game",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "watch": "webpack --watch",
     "start": "webpack serve --open",
     "build": "webpack"
@@ -20,12 +20,16 @@
   },
   "homepage": "https://github.com/lemenade3/Battleship#readme",
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "babel-jest": "^29.4.1",
     "css-loader": "^6.7.3",
     "eslint": "^8.33.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.4.1",
     "prettier": "2.8.3",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
